--- a/package.json
+++ b/package.json
@@ -23,13 +23,20 @@
     "firebase": "^7.8.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "@ngxs-labs/dispatch-decorator": "^2.1.0",
+    "@ngxs-labs/select-snapshot": "^1.1.0",
+    "@ngxs/form-plugin": "^3.6.1",
+    "@ngxs/storage-plugin": "^3.6.0",
+    "@ngxs/store": "^3.6.1",
+    "@ngxs-labs/firestore-plugin": "0.0.8"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.21",
     "@angular/cli": "~8.3.21",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
+    "@ngxs/devtools-plugin": "^3.6.0",
     "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
